--- a/src/features/main/search/ui/Search.module.css
+++ b/src/features/main/search/ui/Search.module.css
@@ -3,6 +3,7 @@
 .form {
     /*@mixin responsive margin-top, 200;*/
     @mixin flex-just-align center, center;
+    z-index: 10;
 }
 
 .input_link {
